# hunea

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  NOTICE  README.en.md  README.md  SECURITY.md  acp.example.toml  config.example.toml  models.example.toml  phrases.example.toml
crates/acp/: Cargo.toml
crates/acp/src/: command.rs  event.rs  identity.rs  initialize.rs  lib.rs  permission.rs  protocol.rs  terminal.rs  tests.rs
crates/acp/src/install/: manifest.rs  paths.rs  tests.rs
crates/acp/src/registry/: resolve.rs  tests.rs
crates/app/: Cargo.toml
crates/app-config/: Cargo.toml
crates/app-config/src/: startup_error.rs
crates/app-config/src/appconfig/: defaults.rs  error.rs  file_config.rs  load.rs  managed_search_authorization.rs  merge.rs  mod.rs  paths.rs  types.rs  validate.rs
crates/app-config/tests/: app_config.rs
crates/app/src/: lib.rs  runtime.rs
crates/app/tests/: app_run.rs  app_transcript.rs
crates/conversation-runtime/: Cargo.toml
crates/conversation-runtime/src/: context_budget.rs  conversation_session.rs  event_notifier.rs  lib.rs
crates/conversation-runtime/src/conversation/: client.rs  error.rs  mod.rs  permission.rs  provider_conversation.rs  response.rs  session.rs  turn.rs
crates/conversation-runtime/src/llm/: client.rs  error.rs  mod.rs  prompt_cache.rs  provider.rs  request.rs  tool_errors.rs
crates/conversation-runtime/src/models/: config.rs  mod.rs  refresh.rs
crates/conversation-runtime/tests/: conversation_runtime.rs  provider_models_config.rs  provider_runtime_boundaries.rs  runtime_event_notifier.rs
crates/native-agent/: Cargo.toml
crates/native-agent/src/: agent_session.rs  lib.rs  provider_kind.rs
crates/native-agent/tests/: native_ai_boundaries.rs  rig_native_boundaries.rs  runtime_native.rs  runtime_native_models_config.rs
crates/runtime-domain/: Cargo.toml
crates/runtime-domain/src/: context_budget.rs  dynamic_environment.rs  lib.rs  model_catalog.rs  model_context_limit.rs  model_family.rs  paths.rs  phrases.rs  prompt_assembly.rs  provider.rs  request_policy.rs  text.rs  time.rs
crates/runtime-domain/tests/: envinfo_git.rs  envinfo_workdir.rs  runtime_phrases_config.rs  runtime_session.rs  workspace_boundaries.rs
crates/session-store/: Cargo.toml
crates/session-store/src/: jsonl.rs  lib.rs  message_history.rs  meta_derive.rs  metadata.rs  prompt_assembly.rs  recorder.rs  store.rs  util.rs
crates/session-store/tests/: crash_recovery_e2e.rs  dependency_boundaries.rs  session_store.rs
crates/terminal-app/: Cargo.toml
crates/terminal-app/src/: blocking_runtime.rs  dynamic_environment.rs  lib.rs  options_mapping.rs  prompt_assembly.rs  replay.rs  runtime.rs  session_store_bridge.rs
crates/terminal-app/tests/: app_run.rs  app_transcript.rs
crates/terminal-cli/: Cargo.toml
crates/terminal-cli/src/: main.rs
crates/terminal-cli/tests/: startup_error.rs
crates/terminal-ui/: Cargo.toml
crates/terminal-ui/benches/: frontend_tui.rs
crates/terminal-ui/src/: attached_prompt_picker_row.rs  benchmark.rs  bounded_lru_cache.rs  command_panel.rs  composer_inline_picker.rs  composer_message.rs  custom_prompt_picker.rs  display_width.rs  exit_confirmation.rs  external_editor.rs  file_picker.rs  file_search.rs  final_body_divider.rs  frame_time.rs  fullscreen_list_chrome.rs  fullscreen_search_list.rs  history_scroll_indicator.rs  image_attachment.rs  inline_panel.rs  keyboard_enhancement.rs  lib.rs  list_selection.rs  markdown_display.rs  markdown_source.rs  modal_layer.rs  model.rs  model_panel.rs  motion.rs  overlay_input_result.rs  overlay_key_result.rs  path_resolve.rs  picker_scrollbar.rs  plain_text_preview.rs  relative_age.rs  render_frame.rs  runner.rs  runtime_tool_preview.rs  search_highlight.rs  session_tree_preview_replay.rs  session_tree_row_kind_view.rs  (+21 more)
crates/terminal-ui/tests/: frontend_tui_command_panel.rs  frontend_tui_composer.rs  frontend_tui_composer_mouse.rs  frontend_tui_document.rs  frontend_tui_exit_confirmation.rs  frontend_tui_external_editor.rs  frontend_tui_history_scroll_indicator.rs  frontend_tui_model.rs  frontend_tui_model_panel.rs  frontend_tui_selection.rs  frontend_tui_status_line.rs  frontend_tui_style_modes.rs  frontend_tui_theme.rs  frontend_tui_transcript_overlay.rs  startup_banner.rs  workspace_boundaries.rs
crates/tool-loop-runtime/: Cargo.toml
crates/tool-loop-runtime/src/: activity.rs  error.rs  lib.rs  runtime.rs
crates/tool-runtime/: Cargo.toml
crates/tool-runtime/src/: definition.rs  execution.rs  executor.rs  lib.rs  permission.rs  schema.rs  tool_error.rs
crates/tool-runtime/tests/: runtime_tools.rs  runtime_tools_builtin.rs  runtime_tools_edit.rs  runtime_tools_mutation.rs
crates/tools/: Cargo.toml
crates/tools/src/: definition.rs  execution.rs  executor.rs  kind.rs  lib.rs  permission.rs  registry.rs  rig.rs  schema.rs  tool_error.rs
crates/tools/tests/: rig_tool_server.rs  runtime_tools.rs  runtime_tools_builtin.rs  runtime_tools_edit.rs  runtime_tools_mutation.rs
crates/tui/: Cargo.toml
crates/tui/benches/: frontend_tui.rs
crates/tui/src/: acp_tool_preview.rs  command_panel.rs  composer_mouse.rs  external_editor.rs  file_picker.rs  file_search.rs  hero.rs  hero_item.rs  history_scroll_indicator.rs  inline_panel.rs  lib.rs  model.rs  model_panel.rs  native_prompt.rs  reasoning_message.rs  runner.rs  runtime_tool_preview.rs  shimmer.rs  status_line.rs  status_phrases.rs  stream_activity.rs  system_message.rs  tool_approval_panel.rs  tool_result.rs  update.rs  view.rs
crates/tui/src/acp/: mod.rs  (+3 more)
crates/tui/tests/: frontend_tui_acp_panel.rs  frontend_tui_command_panel.rs  frontend_tui_composer.rs  frontend_tui_composer_mouse.rs  frontend_tui_document.rs  frontend_tui_exit_confirmation.rs  frontend_tui_external_editor.rs  frontend_tui_history_scroll_indicator.rs  frontend_tui_model.rs  frontend_tui_model_panel.rs  frontend_tui_selection.rs  frontend_tui_status_line.rs  frontend_tui_style_modes.rs  frontend_tui_theme.rs  frontend_tui_transcript_overlay.rs  startup_hero.rs  workspace_boundaries.rs
(+890 files in other folders)
