[workspace]
members = [
    "crates/provider-protocol",
    "crates/openai-compat-provider",
    "crates/tool-loop-runtime",
    "crates/terminal-cli",
    "crates/terminal-app",
    "crates/app-config",
    "crates/terminal-ui",
    "crates/runtime-domain",
    "crates/tool-runtime",
    "crates/conversation-runtime",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.4.5"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
base64 = "0.22.1"
color-eyre = "0.6.5"
criterion = { version = "0.8.2", features = ["html_reports"] }
crossterm = "0.29.0"
diffy = "0.5.0"
directories = "6"
flate2 = "1"
futures-util = "0.3.31"
globset = "0.4"
http = "1.4.0"
ignore = "0.4.25"
libc = "0.2"
tool-loop-runtime = { path = "crates/tool-loop-runtime" }
provider-protocol = { path = "crates/provider-protocol" }
openai-compat-provider = { path = "crates/openai-compat-provider" }
terminal-app = { path = "crates/terminal-app" }
app-config = { path = "crates/app-config" }
runtime-domain = { path = "crates/runtime-domain" }
conversation-runtime = { path = "crates/conversation-runtime" }
tool-runtime = { path = "crates/tool-runtime" }
terminal-ui = { path = "crates/terminal-ui" }
percent-encoding = "2"
pulldown-cmark = "0.13.4"
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1.0.28"
sha2 = "0.10"
syntect = { version = "5", default-features = false, features = ["parsing"] }
tar = "0.4"
tachyonfx = { version = "0.25.0", default-features = false, features = ["std", "std-duration"] }
terminal-light = "1.8.0"
thiserror = "2"
tiktoken = "3.1.4"
tokio = { version = "1.52.1", features = ["process", "rt", "macros", "io-util", "time", "sync", "fs"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
toml = "1.1.2"
toml_edit = "0.25.12"
two-face = "0.5.1"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
