[workspace]
members = [
    "crates/provider-protocol",
    "crates/session-store",
    "crates/openai-compat-provider",
    "crates/tool-loop-runtime",
    "crates/terminal-cli",
    "crates/terminal-app",
    "crates/app-config",
    "crates/terminal-ui",
    "crates/runtime-domain",
    "crates/tool-runtime",
    "crates/conversation-runtime",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.11.1-alpha.2"
edition = "2024"
license = "Apache-2.0"
description = "A terminal-based AI assistant client built with Rust and Ratatui."
repository = "https://github.com/yunxinx/hunea"
homepage = "https://github.com/yunxinx/hunea"
readme = "README.md"
keywords = ["ai", "assistant", "terminal", "tui", "ratatui"]
categories = ["command-line-utilities"]

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
packages = ["terminal-cli"]
github-attestations = true

[workspace.dependencies]
anyhow = "1"
arboard = "3.6.1"
base64 = "0.22.1"
base16ct = { version = "1.0.0", features = ["alloc"] }
color-eyre = "0.6.5"
criterion = { version = "0.8.2", features = ["html_reports"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
diffy = "0.5.0"
directories = "6"
flate2 = "1"
futures-util = "0.3.31"
globset = "0.4"
ignore = "0.4.26"
libc = "0.2"
tool-loop-runtime = { path = "crates/tool-loop-runtime" }
provider-protocol = { path = "crates/provider-protocol" }
openai-compat-provider = { path = "crates/openai-compat-provider" }
terminal-app = { path = "crates/terminal-app" }
app-config = { path = "crates/app-config" }
runtime-domain = { path = "crates/runtime-domain" }
conversation-runtime = { path = "crates/conversation-runtime" }
session-store = { path = "crates/session-store" }
tool-runtime = { path = "crates/tool-runtime" }
terminal-ui = { path = "crates/terminal-ui" }
percent-encoding = "2"
pulldown-cmark = "0.13.4"
ratatui = { version = "0.30.2", features = ["crossterm_0_29"] }
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls", "stream"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10.4"
semver = "1.0.28"
sha2 = "0.11"
syntect = { version = "5", default-features = false, features = ["parsing"] }
tar = "0.4"
tachyonfx = { version = "0.25.0", default-features = false, features = ["std", "std-duration"] }
terminal-light = "1.8.0"
tempfile = "3.23.0"
thiserror = "2"
tiktoken = "3.5.1"
tokio = { version = "1.52.1", features = ["process", "rt", "macros", "io-util", "time", "sync", "fs"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tracing = "0.1"
two-face = "0.5.1"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.13.3"
unicode-width = "0.2.2"
url = "2"
uuid = { version = "1", features = ["serde", "std", "v7"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
