[package]
name = "mo-acp"
version.workspace = true
edition.workspace = true

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
base64.workspace = true
libc.workspace = true
mo-core.workspace = true
portable-pty.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
url.workspace = true
