[package]
name = "app-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
directories.workspace = true
runtime-domain.workspace = true
serde = { workspace = true }
toml.workspace = true
toml_edit.workspace = true
unicode-width.workspace = true
