[package]
name = "mo-app"
version.workspace = true
edition.workspace = true

[dependencies]
color-eyre.workspace = true
mo-acp.workspace = true
mo-config.workspace = true
mo-core.workspace = true
mo-native-agent.workspace = true
mo-tui.workspace = true

[dev-dependencies]
crossterm.workspace = true
