[package]
name = "conversation-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
directories.workspace = true
tool-loop-runtime.workspace = true
provider-protocol.workspace = true
openai-compat-provider.workspace = true
runtime-domain.workspace = true
tool-runtime.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
