[package]
name = "mo-native-agent"
version.workspace = true
edition.workspace = true

[dependencies]
directories.workspace = true
futures-util.workspace = true
http.workspace = true
mo-core.workspace = true
mo-tools.workspace = true
reqwest.workspace = true
rig-core.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
