[package]
name = "runtime-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
directories.workspace = true
provider-protocol.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tiktoken.workspace = true
toml.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-util.workspace = true
