[package]
name = "session-store"
version.workspace = true
edition.workspace = true

[dependencies]
provider-protocol.workspace = true
runtime-domain.workspace = true
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = "0.1"
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
