[package]
name = "session-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
provider-protocol.workspace = true
runtime-domain.workspace = true
rusqlite.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
