[package]
name = "terminal-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
color-eyre.workspace = true
app-config.workspace = true
runtime-domain.workspace = true
conversation-runtime.workspace = true
session-store.workspace = true
tool-runtime.workspace = true
terminal-ui.workspace = true
crossterm.workspace = true
futures-util.workspace = true
ratatui.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
libc.workspace = true
provider-protocol.workspace = true
