[package]
name = "tool-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
ignore.workspace = true
libc.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tokio.workspace = true
