[package]
name = "tool-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
directories.workspace = true
flate2.workspace = true
globset.workspace = true
ignore.workspace = true
libc.workspace = true
regex.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
tokio-util.workspace = true
unicode-normalization.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
tokio.workspace = true
