[package]
name = "mo-tools"
version.workspace = true
edition.workspace = true

[dependencies]
ignore.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rig-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tokio.workspace = true
