[package]
name = "mo-tui"
version.workspace = true
edition.workspace = true

[features]
default = []
bench-support = []

[dependencies]
arboard.workspace = true
base64.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
diffy.workspace = true
mo-acp.workspace = true
mo-core.workspace = true
mo-native-agent.workspace = true
percent-encoding.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde_json.workspace = true
syntect.workspace = true
terminal-light.workspace = true
two-face.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
url.workspace = true

[dev-dependencies]
agent-client-protocol.workspace = true
criterion.workspace = true

[[bench]]
name = "frontend_tui"
harness = false
required-features = ["bench-support"]
